2002-05-20  Michael Thome  <mthome@bbn.com>

	* NodeAgent
	Support for bug 1340, with some additional cleanups.

	* SimpleAgent
	Accept direct externally-specified components - bug 1340.

	* Agent
	Minor cleanup of dead code.

2002-05-17  Michael Thome  <mthome@bbn.com>

	* org/cougaar/core/service/BlackboardQueryService, etc
	Simpler blackboard access for clients which need only point
	queries. Closes bug 1140.

2002-05-16  Todd Wright  <twright@bbn.com>

	* mts, topology, SimpleAgent, NodeAgent:
        Fixed bug 1313, "Separate topology from MTS"
        Moved topology related code from MTS to separate service 
        providers.  Created new topology reader/writer services.
        Modified agent and node-agent to use the new topology APIs.
        Created new "/topology" servlet.

2002-05-09  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/adaptivity/CPUTestPlugin.java:
	More elaborate schedule of cpu condition for testing.

	* org/cougaar/core/blackboard/Blackboard.java:
	Ignore org.cougaar.core.persistence.enabled. Always create
	persistence so that agent mobility is always possible. See
	BasePersistence checkin message for more detail.

	* org/cougaar/core/service/BlackboardService.java: 
	Bug 1232
	Define closeTransactionDontReset.
	Deprecate closeTransaction(boolean);

	* org/cougaar/core/servlet/SimpleServletSupportImpl.java: 
	* org/cougaar/core/mobility/servlet/MoveAgentServlet.java: 
	Bug 1232
	Use closeTransactionDontReset.
	
	* org/cougaar/core/blackboard/Subscriber.java:
	Bug 1232
	Define closeTransactionDontReset.
	Deprecate closeTransaction(boolean);

2002-05-08  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/blackboard/Subscriber.java:
	Avoid stuffing the inbox with envelopes if there are no
	subscriptions. The inbox is not emptied until the next transaction
	is opened and subscribers (such as servlets) may never open a
	transaction causing unbounded build-up of envelopes until memory