@@ -1,3 +1,9 @@
+2002-05-21  Michael Thome  <mthome@bbn.com>
+
+	* NewTask, TaskImpl
+	Added addPrepositionalPhrase(PP), setPrepositionalPhrases(PP), and
+	deprecated setPrepositionalPhrases(PP) as confusing.
+
 2002-05-20  Michael Thome  <mthome@bbn.com>
 
 	* NodeAgent
